# bob_sdlviz

./: .env.template  .gitignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  package.xml  test_image.json
.github/workflows/: ci.yml  docker.yml
config/: nexus_ghost.json  nexus_mastermind.json  nexus_matrix.json  nexus_minimal.json  nexus_ops.json  sdlviz.json  sdlviz.yaml
include/bob_sdlviz/: sdlviz.hpp  terminal.hpp  types.hpp
scripts/: audio_bridge.py  feed_audio.sh  overlay.html  start_stream.sh  ui_node.py  write_fifo.sh
src/: sdlviz.cpp  sdlviz_node.cpp  terminal.cpp
